--- a/index.html
+++ b/index.html
@@ -1,8 +1,9 @@
 <html>
 	<head>
 		<title>Teste Code deploy</title>
+		<meta charset="utf-8" />
 	</head>
 	<body>
-		<h1>Teste Code deploy versão 1</h1>
+		<h1 style="color: red;">Teste Code deploy versão 2</h1>
 	</body>
 </html>
