--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 		<title>Teste Code deploy</title>
 		<meta charset="utf-8" />
 	</head>
-	<body>
-		<h1 style="color: red;">Teste Code deploy versão 2</h1>
+	<body style="background-color: blue;">
+		<h1 style="color: red;">Versão 3</h1>
 	</body>
 </html>
