--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 		<title>Teste Code deploy</title>
 		<meta charset="utf-8" />
 	</head>
-	<body style="background-color: black;">
-		<h1 style="color: white; font-size: 100px; text-align: center; margin-top: 100px;">Versão 2</h1>
+	<body style="background-color: red;">
+		<h1 style="color: white; font-size: 100px; text-align: center; margin-top: 100px;">Versão 3</h1>
 	</body>
 </html>
